# PacmanOS

./: .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  applem1-pacmanos-none.json  bringup.s  build.sh  config.sh  docker-compose.yml  exception.s  figuring_out_header.txt  framebuffer.h  gdb.sh  hypermain.c  hypermain.h  img2c.py  img2rs.py  linker.ld  linker_qemu.ld  linker_virt.ld  qemu.patch  qemu.sh  start.s  types.h
.cargo/: config.toml
containers/devel/: Dockerfile  build.sh
legacy/: README.md  framebuffer.c  hypermain.c  pokeaddr.c
src/: cache.rs  console.rs  exception.rs  framebuffer.rs  hypervisor.rs  iboot.rs  lib.rs  memory.rs  msr.rs  serial.rs  virt.rs
utils/: img2rs10bit.py
virt_test/: Makefile  virt.s
