[package]
name = "pacman_hypervisor"
version = "0.1.0"
authors = ["Joseph Ravichandran"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font8x8 = { version = "0.3", default-features = false }
bit_field = "0.10.1"
bitflags = "1.0.4"
linked_list_allocator = "0.9.0"
rlibc = "1.0"
