[package]
name = "pacman_hypervisor"
version = "0.1.0"
authors = ["Joseph Ravichandran"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font8x8 = { version = "0.3", default-features = false }
bitfield = "0.13.2"
